@@ -1,3 +1,13 @@
+2010-10-21  Marco Randazzo <marco.randazzo@iit.it>
+
+	* src\modules\serial\SerialDeviceDriver.cpp
+	* src\modules\serial\SerialDeviceDriver.h
+	* src\libYARP_dev\include\yarp\dev\SerialInterfaces.h
+	* src\libYARP_dev\include\yarp\dev\ServerSerial.h
+	Added two new methods to the serial device driver:
+	-	receiveChar() to receive a single character from the serial port.
+	- 	receiveLine() to receive a '\n' terminated string from the serial port.
+
 2010-10-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_dev/src/ServerControlBoard.cpp: add missing 
